--- a/Templates/loginpagestylish.html
+++ b/Templates/loginpagestylish.html
@@ -39,7 +39,7 @@
 
 	<div class="limiter">
 
-		<div class="container-login100" style="        background-image: url({% static 'images/bg_1.jpg)' %};">
+		<div class="container-login100" style="        background-image: url({% static 'images/bg-01.jpg)' %};">
 			<div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
 				{% if user.is_authenticated %}
 
